sync OASIS gen files and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-*.annot
-*.cmo
-*.cma
-*.cmi
-*.a
-*.o
-*.cmx
-*.cmxs
-*.cmxa
+_build/
+setup.bin
+setup.data
+setup.log
+configure
+config.mk
+configure.cmi
+configure.cmx
+configure.o
