--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: c
 install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
 script: bash -ex .travis-opam.sh
 env:
+  global:
+  - EXTRA_REMOTES="https://github.com/mirage/mirage-dev.git"
+  matrix:
   - OCAML_VERSION=4.03
   - OCAML_VERSION=4.02
