--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.t
 script: bash -ex .travis-opam.sh
 env:
   global:
+    - PACKAGE="mirage-block-xen"
   matrix:
   - OCAML_VERSION=4.04
   - OCAML_VERSION=4.03
