--- a/mirage-block-xen.opam
+++ b/mirage-block-xen.opam
@@ -13,18 +13,22 @@ tags: [
   "org:mirage"
   "org:xapi-project"
 ]
-build: [ [make] ]
-install: [ [make "install" "BINDIR=%{bin}%"] ]
-remove: [ [make "uninstall" "BINDIR=%{bin}%"] ]
+
+build: [
+  [ "jbuilder" "subst"] {pinned}
+  [ "jbuilder" "build" "-p" name "-j" jobs ]
+]
+
 depends: [
-  "ocamlfind"
+  "ocamlfind" {build}
+  "jbuilder"  {build & >="1.0+beta9"}
   "cmdliner"
   "logs"
   "stringext"
   "lwt" {>= "2.4.3"}
   "cstruct" {>= "1.9.0"}
   "ppx_tools"
-  "shared-memory-ring" {>= "0.4.1"}
+  "shared-memory-ring-lwt"
   "mirage-block-lwt" {>= "1.0.0"}
   "ipaddr"
   "io-page" {>= "1.4.0"}
@@ -32,5 +36,5 @@ depends: [
   "rresult"
 ]
 available: [
-  ocaml-version >= "4.02.0" & os = "linux"
+  ocaml-version >= "4.02.0"
 ]
