--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ script: bash -ex .travis-opam.sh
 env:
   global:
     - PACKAGE="mirage-block-xen"
+    - PINS="mirage-xen"
   matrix:
   - OCAML_VERSION=4.04
   - OCAML_VERSION=4.03
