--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
+sudo: false
+services:
+  - docker
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-docker.sh
+script: bash -ex ./.travis-docker.sh
 env:
   global:
-    - PACKAGE="mirage-block-xen"
-    - PINS="mirage-xen"
+  - PACKAGE="mirage-block-xen"
   matrix:
-  - OCAML_VERSION=4.04
-  - OCAML_VERSION=4.03
+  - DISTRO="ubuntu-16.04" OCAML_VERSION="4.03.0"
+  - DISTRO="alpine-3.5" OCAML_VERSION="4.04.0"
