--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ env:
   - PACKAGE="mirage-block-xen"
   matrix:
   - DISTRO="ubuntu-16.04" OCAML_VERSION="4.03.0"
-  - DISTRO="alpine-3.5" OCAML_VERSION="4.04.0"
+  - DISTRO="alpine" OCAML_VERSION="4.04.2"
