--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ env:
   global:
   - PACKAGE="mirage-block-xen"
   matrix:
-  - DISTRO="ubuntu-16.04" OCAML_VERSION="4.03.0"
+  - DISTRO="ubuntu-16.04" OCAML_VERSION="4.05.0"
   - DISTRO="alpine" OCAML_VERSION="4.04.2"
+  - DISTRO="debian-stable" OCAML_VERSION="4.03.0"
