--- a/lib/dune
+++ b/lib/dune
@@ -11,7 +11,7 @@
  (name mirage_block_xen_front)
  (public_name mirage-block-xen.front)
  (modules Blkfront Block)
- (libraries logs stringext lwt cstruct ppx_cstruct mirage-block-lwt io-page
+ (libraries logs stringext lwt cstruct mirage-block-lwt io-page
    io-page-xen shared-memory-ring shared-memory-ring-lwt mirage-block-xen
    xen-evtchn xen-gnt mirage-xen)
  (wrapped false))
@@ -20,7 +20,7 @@
  (name mirage_block_xen_back)
  (public_name mirage-block-xen.back)
  (modules Blkback Block_request)
- (libraries logs lwt cstruct ppx_cstruct io-page shared-memory-ring
+ (libraries logs lwt cstruct io-page shared-memory-ring
    shared-memory-ring-lwt mirage-block-xen xen-evtchn xen-gnt xenstore
    xenstore.client mirage-block-lwt rresult)
  (wrapped false))
