--- a/mirage-block-xen.opam
+++ b/mirage-block-xen.opam
@@ -43,3 +43,8 @@ library which enables high-throughput, low-latency data
 transfers over shared memory on both x86 and ARM architectures,
 using the standard Xen RPC and event channel semantics.
 """
+
+pin-depends: [
+  ["mirage-xen.dev" "git+https://github.com/mirage/mirage-xen"]
+]
+
