--- a/mirage-block-xen.opam
+++ b/mirage-block-xen.opam
@@ -7,7 +7,7 @@ homepage: "https://github.com/mirage/mirage-block-xen"
 doc: "https://mirage.github.io/mirage-block-xen/"
 bug-reports: "https://github.com/mirage/mirage-block-xen/issues"
 depends: [
-  "ocaml" {>= "4.02.0"}
+  "ocaml" {>= "4.06.0"}
   "dune"
   "cmdliner"
   "logs"
@@ -16,7 +16,7 @@ depends: [
   "cstruct" {>= "1.9.0"}
   "ppx_cstruct" {build & >= "3.6.0"}
   "shared-memory-ring-lwt"
-  "mirage-block-lwt" {>= "1.0.0"}
+  "mirage-block" {>= "2.0.0"}
   "ipaddr"
   "io-page-xen" {>= "2.0.0"}
   "mirage-xen" {>= "4.0.0"}
