--- a/lib/core/dune
+++ b/lib/core/dune
@@ -2,7 +2,7 @@
  (name mirage_block_xen)
  (public_name mirage-block-xen)
  (modules Blkproto Device_number)
- (libraries cstruct io-page mirage-xen.internals)
+ (libraries cstruct io-page mirage-xen)
  (wrapped false)
  (preprocess
   (pps ppx_cstruct)))
