Update to new Xen core platform stack
Update mirage-block-xen to the interface changes in the new Xen core
platform stack.

Part of mirage/mirage#1159, depends on mirage/mirage-xen#23.

--- a/lib/back/dune
+++ b/lib/back/dune
@@ -4,6 +4,6 @@
  (modules Blkback Block_request)
  (flags :standard -w -3)
  (libraries logs lwt cstruct io-page shared-memory-ring
-   shared-memory-ring-lwt mirage-block-xen xen-evtchn xenstore
+   shared-memory-ring-lwt mirage-block-xen xenstore
    xenstore.client mirage-block rresult mirage-xen)
  (wrapped false))
