--- a/lib/front/dune
+++ b/lib/front/dune
@@ -3,6 +3,6 @@
  (public_name mirage-block-xen.front)
  (modules Blkfront Block)
  (libraries logs stringext lwt cstruct mirage-block io-page
-   io-page-xen shared-memory-ring shared-memory-ring-lwt mirage-block-xen
-   xen-evtchn mirage-xen)
+   shared-memory-ring shared-memory-ring-lwt mirage-block-xen
+   mirage-xen)
  (wrapped false))
