--- a/lib/front/dune
+++ b/lib/front/dune
@@ -2,7 +2,7 @@
  (name mirage_block_xen_front)
  (public_name mirage-block-xen.front)
  (modules Blkfront Block)
- (libraries logs stringext lwt cstruct mirage-block io-page
+ (libraries logs lwt cstruct mirage-block io-page
    shared-memory-ring shared-memory-ring-lwt mirage-block-xen
    mirage-xen)
  (wrapped false))
