--- a/mirage-block-xen.opam
+++ b/mirage-block-xen.opam
@@ -9,18 +9,16 @@ bug-reports: "https://github.com/mirage/mirage-block-xen/issues"
 depends: [
   "ocaml" {>= "4.08.0"}
   "dune"
-  "cmdliner"
   "logs"
-  "stringext"
   "lwt" {>= "2.4.3"}
   "cstruct" {>= "1.9.0"}
   "ppx_cstruct" {build & >= "3.6.0"}
+  "shared-memory-ring"
   "shared-memory-ring-lwt"
   "mirage-block" {>= "2.0.0"}
-  "ipaddr"
   "io-page" {>= "2.0.0"}
   "mirage-xen" {>= "6.0.0"}
-  "rresult"
+  "xenstore"
 ]
 build: [
   ["dune" "subst"] {pinned}
