--- a/mirage-block-xen.opam
+++ b/mirage-block-xen.opam
@@ -12,7 +12,7 @@ depends: [
   "logs"
   "lwt" {>= "2.4.3"}
   "cstruct" {>= "1.9.0"}
-  "ppx_cstruct" {build & >= "3.6.0"}
+  "ppx_cstruct" {>= "3.6.0"}
   "shared-memory-ring"
   "shared-memory-ring-lwt"
   "mirage-block" {>= "2.0.0"}
