--- a/mirage-block-xen.opam
+++ b/mirage-block-xen.opam
@@ -11,7 +11,7 @@ depends: [
   "dune" {>= "1.0"}
   "logs"
   "lwt" {>= "2.4.3"}
-  "cstruct" {>= "1.9.0"}
+  "cstruct" {>= "6.0.0"}
   "ppx_cstruct" {>= "3.6.0"}
   "shared-memory-ring"
   "shared-memory-ring-lwt"
@@ -19,6 +19,7 @@ depends: [
   "io-page" {>= "2.0.0"}
   "mirage-xen" {>= "7.0.0"}
   "xenstore"
+  "fmt" {>= "0.8.7"}
 ]
 build: [
   ["dune" "subst"] {dev}
