--- a/lib/core/dune
+++ b/lib/core/dune
@@ -3,6 +3,4 @@
  (public_name mirage-block-xen)
  (modules Blkproto Device_number)
  (libraries cstruct io-page mirage-xen)
- (wrapped false)
- (preprocess
-  (pps ppx_cstruct)))
+ (wrapped false))
